gl31-master/src/test/deca/context/invalid/sansobjet/affect_string_int.deca
// Description:
//    Affectation et typage : associe une string a un int
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   int a;
   string b;

   // Doit etre refuse.
   a = b;
}
